--- a/base/symbols/symbols.Deployment.yaml
+++ b/base/symbols/symbols.Deployment.yaml
@@ -30,7 +30,9 @@ spec:
       - name: symbols
         env:
         - name: SYMBOLS_CACHE_SIZE_MB
-          value: "10000"
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.resources.requests.ephemeral-storage
         - name: POD_NAME
           valueFrom:
             fieldRef:
